testsuite/tests/typecheck/should_fail/T13983.stderr

T13983.hs:7:25: error: [GHC-76037] Not in scope: type variable ‘k’
